Run tests on push

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,10 @@ authors = [
 
 description = "Python code for estimating and removing a starfield from a set of celestial images"
 readme = "README.md"
+
+[project.optional-dependencies]
+test = [
+	"pytest >= 8.0",
+	"pytest-arraydiff >= 0.6",
+	"pytest-mpl >= 0.16",
+]
