--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 	"reproject >= 0.13",
 	"dask >= 2023.05.0",
 	"h5py >= 3.10",
+	"tqdm >= 4.66",
 ]
 requires-python = ">= 3.8"
 authors = [
