Fix tests for scipy 1.15
Likely "The vendored HiGHS library has been upgraded from 1.4.0 to 1.8.0, bringing accuracy and performance improvements to solvers."

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ test = [
 	"pytest-arraydiff >= 0.6",
 	"pytest-mock >= 3.7",
 	"pytest-mpl >= 0.16",
+	"scipy >= 1.15",
 ]
 
 [tool.setuptools.dynamic]
