--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
           pip install .[test]
 
       - name: Run tests with pytest
-        run: pytest -v -rsx --mpl-generate-summary=html --mpl-results-path=/tmp/pytest-mpl-results
+        run: pytest -v -rsx --mpl-generate-summary=html --mpl-results-path=/tmp/pytest-mpl-results --color=yes
 
       - uses: actions/upload-artifact@v4
         if: failure()
